syntax = "proto3";

option go_package = "github.com/natdanai0917/test_repo";

//Structure
message IsAvailableToSellReq {
    string playerId =1;
    string itemId =2;
}

message IsAvailableToSellRes {
    bool isAvailable =1;

}

//Method
service InventoryGrpcService {
    rpc IsAvailableToSell (IsAvailableToSellReq) returns (IsAvailableToSellRes);
}
